--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<!-- Group Name -->
-        <groupId>com.mt</groupId>
-        <!-- Artifact ID, callled as project name -->
-        <artifactId>Maven-Web-Project</artifactId>
-        <!-- Version of the artifactt-->
-        <version>1.0-SNAPSHOT</version>
-        <!-- Defines the package (jar/war/ear)-->
-        <packaging>jar</packaging>
- 
-        <!-- Project Name-->
-        <name>Maven-Web-Project</name>
-        <!-- Project's website -->
-        <url>http://www.mithuntechnologies.com</url>
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>com.mt</groupId>
+	<artifactId>maven-web-application</artifactId>
+	<packaging>war</packaging>
+	<version>1.1-SNAPSHOT</version>
+	
+	<name>Maven Web Application</name>
+	<url>http://mithuntechnologies.com</url>
 	
 	<description>Maven Web Project</description>
 
 	<organization>
 		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.co.in/</url>
+		<url>http://mithuntechnologies.com/</url>
 	</organization>
 
 	<properties>
 		<!-- versions -->
+		
 		<spring.version>5.0.2.RELEASE</spring.version>
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+		<sonar.host.url>http://13.233.128.215:9000/</sonar.host.url>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -93,12 +90,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/maven-releases/</url>
+	      <url>http://13.233.113.232:8081/repository/mt-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://localhost:8081/repository/maven-snapshot/</url>
+	      <url>http://13.233.113.232:8081/repository/mt-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
